--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
